fix: common tree implementation aas-tree, aas-table

--- a/projects/aas-lib/src/lib/aas-table/aas-table.component.html
+++ b/projects/aas-lib/src/lib/aas-table/aas-table.component.html
@@ -72,70 +72,71 @@
           }
         </tbody>
       </table>
-    } @else {
-      <table class="table table-sm table-borderless table-hover table-striped">
+} @else {
+    <table class="table table-sm table-borderless table-hover table-striped">
         <thead>
-          <tr>
-            <th class="th-w-checkbox">
-              <input type="checkbox" class="form-check-input" [indeterminate]="someSelected | async"
-                [checked]="everySelected | async" (change)="toggleSelections()">
-              </th>
-              <th scope="col">
-                <div class="text-center" translate>COLUMN_NAME</div>
-              </th>
-              <th scope="col">
-                <div class="text-center" translate>COLUMN_ID</div>
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            @for (row of rows | async; track row) {
-              <tr class="align-middle">
+        <tr>
+        <th class="th-w-checkbox">
+            <input type="checkbox" class="form-check-input" [indeterminate]="someSelected | async"
+            [checked]="everySelected | async" (change)="toggleSelections()">
+            </th>
+            <th scope="col">
+            <div class="text-center" translate>COLUMN_NAME</div>
+            </th>
+            <th scope="col">
+            <div class="text-center" translate>COLUMN_ID</div>
+            </th>
+        </tr>
+        </thead>
+        <tbody>
+        @for (row of rows | async; track row) {
+            <tr class="align-middle">
                 <td>
-                  <input type="checkbox" class="form-check-input" (change)="toggleSelected(row)"
+                    <input type="checkbox" class="form-check-input" (change)="toggleSelected(row)"
                     [checked]="row.selected" [name]="row.name" />
-                  </td>
-                  <td>
+                </td>
+                <td>
                     <div class="d-flex" style="overflow-x: hidden">
-                      <div [ngStyle]="{'width': (row.level * 16) + 'px'}"></div>
-                      @if (!row.isLeaf && !row.expanded && row.hasChildren) {
-                        <a href="javascript:void(0);"
-                          (click)="expand(row)">
-                          <div class="text-dark">
-                            <i class="bi bi-plus-square"></i>
-                          </div>
-                        </a>
-                      }
-                      @if (!row.isLeaf && !row.expanded && !row.hasChildren) {
-                        <div class="text-muted">
-                          <i class="bi bi-square"></i>
-                        </div>
-                      }
-                      @if (!row.isLeaf && row.expanded) {
-                        <a href="javascript:void(0);" (click)="collapse(row)">
-                          <div class="text-dark">
-                            <i class="bi bi-dash-square"></i>
-                          </div>
-                        </a>
-                      }
-                      @if (row.isLeaf) {
+                        <div [ngStyle]="{'width': (row.level * 16) + 'px'}"></div>
+                        @if (row.isLeaf) {
                         <div class="text-muted wh-4"></div>
-                      }
-                      <div class="ms-2">
+                        }@else {
+                            @if (row.expanded) {
+                            <a href="javascript:void(0);" (click)="collapse(row)">
+                                <div class="text-dark">
+                                <i class="bi bi-dash-square"></i>
+                                </div>
+                            </a>
+                            }@else {
+                                @if (row.hasChildren) {
+                                <a href="javascript:void(0);"
+                                    (click)="expand(row)">
+                                    <div class="text-dark">
+                                    <i class="bi bi-plus-square"></i>
+                                    </div>
+                                </a>
+                                }@else {
+                                <div class="text-muted">
+                                    <i class="bi bi-square"></i>
+                                </div>
+                                }
+                            }
+                        }
+                        <div class="ms-2">
                         <img class="img-fluid" width="40" height="40" [src]="row.thumbnail" alt="" />
-                      </div>
-                      <div class="ms-2 flex-grow-1">
+                        </div>
+                        <div class="ms-2 flex-grow-1">
                         <a class="text-nowrap" href="javascript:void(0);" (click)="open(row)">{{row.name |
                         max:60}}</a>
-                      </div>
+                        </div>
                     </div>
-                  </td>
-                  <td>
+                </td>
+                <td>
                     <div>{{row.endpoint}}</div>
                     <div class="text-nowrap" placement="top" [ngbTooltip]="getToolTip(row)">{{row.id | max:80}}</div>
-                  </td>
-                </tr>
-              }
-            </tbody>
-          </table>
-        }
+                </td>
+            </tr>
+            }
+        </tbody>
+    </table>
+    }
