--- a/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
@@ -32,30 +32,33 @@
             <td [colSpan]="node.isLeaf ? 1 : 2">
                 <div class="d-flex" style="overflow-x: hidden">
                     <div [ngStyle]="{'width': (node.level * 16) + 'px'}"></div>
-                    @if (!node.isLeaf && !node.expanded && node.hasChildren) {
-                    <a (click)="expand(node)" href="javascript:void(0);">
-                        <div class="text-dark">
-                            <i class="bi bi-plus-square"></i>
-                        </div>
-                    </a>
-                    }
-                    @if (!node.isLeaf && !node.expanded && !node.hasChildren) {
-                    <div class="text-muted">
-                        <i class="bi bi-square"></i>
-                    </div>
-                    }
-                    @if (!node.isLeaf && node.expanded) {
-                    <a href="javascript:void(0);" (click)="collapse(node)">
-                        <div class="text-dark">
-                            <i class="bi bi-dash-square"></i>
-                        </div>
-                    </a>
-                    }
                     @if (node.isLeaf) {
-                    <div class="wh-4"></div>
+                        <div class="wh-4"></div>
+                    }@else {
+                       @if (node.expanded) {
+                        <a href="javascript:void(0);" (click)="collapse(node)">
+                            <div class="text-dark">
+                                <i class="bi bi-dash-square"></i>
+                            </div>
+                        </a>
+                        }@else {
+                            @if (node.hasChildren) {
+                            <a (click)="expand(node)" href="javascript:void(0);">
+                                <div class="text-dark">
+                                    <i class="bi bi-plus-square"></i>
+                                </div>
+                            </a>
+                            }@else {
+                            <div class="text-muted">
+                                <i class="bi bi-square"></i>
+                            </div>
+                            }
+                        }
                     }
+
                     <div class="ms-1 w-9 rounded bg-info text-white ts-small text-center">
                         {{node.abbreviation}}</div>
+
                     @if (node.hasSemantic) {
                     <div class="ms-1 flex-grow-1 text-nowrap">
                         <a (click)="open(node)" href="javascript:void(0);">{{node.name}}</a>
@@ -63,8 +66,7 @@
                         <span class="text-secondary text-nowrap">{{node.typeInfo}}</span>
                         <span class="text-secondary">]</span>
                     </div>
-                    }
-                    @if (!node.hasSemantic) {
+                    }@else {
                     <div class="ms-1 flex-grow-1 text-nowrap">
                         <b>{{node.name}}</b>
                         <span class="text-secondary">&nbsp;[</span>
@@ -75,15 +77,17 @@
                 </div>
             </td>
             @if (node.isLeaf) {
-            <td align="right">
-                @if (node.displayType === 'text') {
-                <div class="text-nowrap me-2">{{getValue(node)}}</div>
-                }
-                @if (node.displayType === 'boolean') {
-                <input class="form-check-input" [readonly]="true" [checked]="getValue(node)">
-                }
-                @if (node.displayType === 'url') {
-                <a href="javascript:void(0);" class="text-nowrap me-2" (click)="open(node)">{{node.value}}</a>
+            <td class="text-end">
+                @switch(node.displayType) {
+                    @case('boolean') {
+                        <input class="form-check-input" [readonly]="true" [checked]="getValue(node)">
+                    }
+                    @case ('url') {
+                    <a href="javascript:void(0);" class="text-nowrap me-2" (click)="open(node)">{{node.value}}</a>
+                    }
+                    @default {
+                        <div class="text-nowrap me-2">{{getValue(node)}}</div>
+                    }
                 }
             </td>
             }
