--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -37,6 +37,14 @@
             <i class="bi bi-chevron-bar-right"></i>
         </button>
     </div>
+    <div class="btn-group me-2">
+        <button type="button" class="btn btn-primary position-relative" (click)="refreshPage()">
+            <i class="bi bi-arrow-clockwise"></i>
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info">
+                {{count | async}}
+              </span>        
+        </button>
+    </div>
     }
     <div class="btn-group me-2">
         <div ngbDropdown class="btn-group" role="group">
