--- a/projects/aas-portal/src/app/start/favorites-form/favorites-form.component.html
+++ b/projects/aas-portal/src/app/start/favorites-form/favorites-form.component.html
@@ -6,42 +6,43 @@
  !
  !---------------------------------------------------------------------------->
 
-<form (ngSubmit)="submit()">
-  <div class="modal-header text-info">
+<div class="modal-header text-info">
     <h4 class="modal-title">
-      <i class="bi bi-star"></i>
-      <span class="ms-2" translate>CAPTION_FAVORITES</span>
+        <i class="bi bi-star"></i>
+        <span class="ms-2" translate>CAPTION_FAVORITES</span>
     </h4>
     <button type="button" class="btn-close" (click)="cancel()"> </button>
-  </div>
-  <div class="modal-body">
+</div>
+<div class="modal-body">
     @for (message of messages; track message) {
-      <ngb-toast [autohide]="false" class="bg-danger w-100 mb-3">
+    <ngb-toast [autohide]="false" class="bg-danger w-100 mb-3">
         <div class="d-flex">
-          <div class="flex-grow-1">{{ message }}</div>
+            <div class="flex-grow-1">{{ message }}</div>
         </div>
-      </ngb-toast>
+    </ngb-toast>
     }
-    <ul class="list-group">
-      @for (item of items | async; track item) {
-        <li class="list-group-item" (mouseenter)="setActive(item, true)"
-          (mouseleave)="setActive(item, false)">
-          <div class="d-flex flex-row align-items-center">
-            <input #selected class="form-check-input me-1" type="radio" autocomplete="false"
-              (change)="selectedChange(item, selected.checked)" name="name" [disabled]="!name.value"
-              [checked]="item.selected">
-              <input #name class="form-control no-border" type="text" placeholder="{{'PLACEHOLDER_NEW_FAVORITES' | translate}}"
-                [value]="item.name" (input)="inputName(item, name.value)">
-                <button class="btn" type="button" [hidden]="!canDelete(item)">
-                  <i class="bi bi-trash"></i>
+    <ul class="list-group overflow-y-auto">
+        @for (item of items; track item.id) {
+        <li class="list-group-item" (mouseenter)="(item.active = true)" (mouseleave)="(item.active = false)">
+            <div class="d-flex flex-row align-items-center">
+                <input class="form-check-input me-1" type="radio" name="item.selected" [disabled]="!item.name"
+                    autocomplete="false" (change)="selected($event.target, item)" [checked]="item.selected">
+                <input class="form-control no-border" type="text" name="item.name"
+                    (input)="valueChanged($event.target, item)" [value]="item.name" required>
+                <button class="btn text-success fs-5 p-0 me-2" type="button" [hidden]="!item.active && !item.selected"
+                    (click)="add(item)">
+                    <i class="bi bi-plus-lg"></i>
                 </button>
-              </div>
-            </li>
-          }
-        </ul>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary" translate>CMD_OK</button>
-        <button type="button" class="btn btn-secondary" (click)="cancel()" translate>CMD_CANCEL</button>
-      </div>
-    </form>
+                <button class="btn text-danger fs-5 p-0" type="button" [hidden]="!item.active && !item.selected"
+                    (click)="delete(item)">
+                    <i class="bi bi-trash"></i>
+                </button>
+            </div>
+        </li>
+        }
+    </ul>
+</div>
+<div class="modal-footer">
+    <button type="submit" class="btn btn-primary" (click)="submit()" translate>CMD_OK</button>
+    <button type="button" class="btn btn-secondary" (click)="cancel()" translate>CMD_CANCEL</button>
+</div>
