--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -6,7 +6,8 @@
  !
  !---------------------------------------------------------------------------->
 
-<div id="start-container" class="container-fluid">
+@if((document | async) !== null) {
+<div id="aas-container" class="container-fluid">
     <div class="row mt-1">
         <div class="d-flex flex-row">
             <div class="border border-secondary rounded p-1">
@@ -104,3 +105,6 @@
         </button>
     </div>
 </ng-template>
+} @else {
+<div>Kein Document</div>
+}
