--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -8,7 +8,7 @@
 
 <div id="start-container" class="container-fluid">
     <fhg-aas-table [documents]="documents" [viewMode]="viewMode" [(selected)]="selected"
-        [filter]="filter" ></fhg-aas-table>
+        [filter]="filter"></fhg-aas-table>
 </div>
 
 <ng-template #startToolbar>
@@ -16,7 +16,8 @@
         <button class="btn btn-outline-primary" type="button" (click)="addToFavorites().subscribe()">
             <i class="bi bi-star"></i>
         </button>
-        <select #selectFavorites [ngClass]="activeFavorites !== '' ? 'form-select fst-normal fw-normal' : 'form-select fst-italic fw-light'"
+        <select #selectFavorites
+            [ngClass]="activeFavorites !== '' ? 'form-select fst-normal fw-normal' : 'form-select fst-italic fw-light'"
             [value]="activeFavorites" (change)="setActiveFavorites(selectFavorites.value)">
             @for (option of favoritesLists; track option; let i = $index) {
             @if (i === 0) {
