--- a/projects/aas-portal/src/app/view/view.component.html
+++ b/projects/aas-portal/src/app/view/view.component.html
@@ -6,16 +6,20 @@
  !
  !---------------------------------------------------------------------------->
 
-@switch (template()) {
-@case('Nameplate'){
-<fhg-digital-nameplate [submodels]="submodels()"></fhg-digital-nameplate>
-}
-@case ('CustomerFeedback') {
-<fhg-customer-feedback [submodels]="submodels()"></fhg-customer-feedback>
-}
-@default {
-<div class="alert alert-info" role="alert">No well known submodel selected.</div>
-}
-}
+<div class="container-fluid">
+    @switch (template()) {
+    @case('Nameplate'){
+    <fhg-digital-nameplate [submodels]="submodels()"></fhg-digital-nameplate>
+    }
+    @case ('CustomerFeedback') {
+    <fhg-customer-feedback [submodels]="submodels()"></fhg-customer-feedback>
+    }
+    @default {
+    <div class="alert alert-info text-center" role="alert">
+        <span>{{template()}}</span><span>&nbsp;</span><span>{{'INFO_NOT_SUPPORTED_SUBMODEL_VIEW' | translate}}</span>
+    </div>
+    }
+    }
+</div>
 
 <ng-template #viewToolbar></ng-template>
