--- a/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
@@ -127,7 +127,5 @@
     </tbody>
 </table>
 } @else {
-<div class="position-relative m-5 p-5">
-    <div class="position-absolute top-50 start-50 translate-middle fs-5">{{message}}</div>
-</div>
+    <div class="alert alert-info text-center mt-2" role="alert">{{'INFO_NO_SHELL_AVAILABLE' | translate}}</div>
 }
