--- a/projects/aas-portal/src/app/view/view.component.html
+++ b/projects/aas-portal/src/app/view/view.component.html
@@ -15,9 +15,7 @@
     <fhg-customer-feedback [submodels]="submodels()"></fhg-customer-feedback>
     }
     @default {
-    <div class="alert alert-info text-center" role="alert">
-        <span>{{template()}}</span><span>&nbsp;</span><span>{{'INFO_NOT_SUPPORTED_SUBMODEL_VIEW' | translate}}</span>
-    </div>
+    <div class="alert alert-info text-center" role="alert">{{'INFO_EMPTY_DISPLAY' | translate}}</div>
     }
     }
 </div>
