--- a/projects/aas-portal/src/app/start/remove-endpoint-form/remove-endpoint-form.component.html
+++ b/projects/aas-portal/src/app/start/remove-endpoint-form/remove-endpoint-form.component.html
@@ -15,7 +15,7 @@
     <button type="button" class="btn-close" (click)="cancel()"> </button>
   </div>
   <div class="modal-body">
-    @for (message of messages; track message) {
+    @for (message of messages(); track message) {
       <ngb-toast [autohide]="false" class="bg-danger w-100 mb-3">
         <div class="d-flex">
           <div class="flex-grow-1">{{ message }}</div>
@@ -23,7 +23,7 @@
       </ngb-toast>
     }
     <ul class="list-group">
-      @for (item of endpoints; track item) {
+      @for (item of endpoints(); track item) {
         <li class="list-group-item">
           <input class="form-check-input me-1" type="checkbox" [id]="'input' + item.name"
             [(ngModel)]="item.selected" name="selected" (change)="inputChange()">
