--- a/projects/aas-portal/src/app/start/start.component.html
+++ b/projects/aas-portal/src/app/start/start.component.html
@@ -7,8 +7,8 @@
  !---------------------------------------------------------------------------->
 
 <div id="start-container" class="container-fluid">
-    <fhg-aas-table [documents]="documents" [viewMode]="viewMode" [(selected)]="selected"
-        [filter]="filter"></fhg-aas-table>
+    <fhg-aas-table [documents]="documents()" [viewMode]="viewMode()" [(selected)]="selected"
+        [filter]="filter()"></fhg-aas-table>
 </div>
 
 <ng-template #startToolbar>
@@ -17,9 +17,9 @@
             <i class="bi bi-star"></i>
         </button>
         <select #selectFavorites
-            [ngClass]="activeFavorites !== '' ? 'form-select fst-normal fw-normal' : 'form-select fst-italic fw-light'"
-            [value]="activeFavorites" (change)="setActiveFavorites(selectFavorites.value)">
-            @for (option of favoritesLists; track option; let i = $index) {
+            [ngClass]="activeFavorites() !== '' ? 'form-select fst-normal fw-normal' : 'form-select fst-italic fw-light'"
+            [value]="activeFavorites()" (change)="setActiveFavorites(selectFavorites.value)">
+            @for (option of favoritesLists(); track option; let i = $index) {
             @if (i === 0) {
             <option class="fst-italic fw-light" [value]="''" translate>FAVORITES</option>
             } @else {
@@ -28,25 +28,25 @@
             }
         </select>
     </div>
-    @if (activeFavorites === '') {
+    @if (activeFavorites() === '') {
     <div class="input-group me-2">
-        <button type="button" class="btn btn-primary" (click)="firstPage()" [disabled]="isFirstPage">
+        <button type="button" class="btn btn-primary" (click)="firstPage()" [disabled]="isFirstPage()">
             <i class="bi bi-chevron-bar-left"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="previousPage()" [disabled]="isFirstPage">
+        <button type="button" class="btn btn-primary" (click)="previousPage()" [disabled]="isFirstPage()">
             <i class="bi bi-chevron-left"></i>
         </button>
-        <select #selectLimit class="form-select" [value]="limit" (change)="setLimit(selectLimit.value)">
+        <select #selectLimit class="form-select" [value]="limit()" (change)="setLimit(selectLimit.value)">
             <option value="10">10</option>
             <option value="20">20</option>
             <option value="30">30</option>
             <option value="40">40</option>
             <option value="50">50</option>
         </select>
-        <button type="button" class="btn btn-primary" (click)="nextPage()" [disabled]="isLastPage">
+        <button type="button" class="btn btn-primary" (click)="nextPage()" [disabled]="isLastPage()">
             <i class="bi bi-chevron-right"></i>
         </button>
-        <button type="button" class="btn btn-primary" (click)="lastPage()" [disabled]="isLastPage">
+        <button type="button" class="btn btn-primary" (click)="lastPage()" [disabled]="isLastPage()">
             <i class="bi bi-chevron-bar-right"></i>
         </button>
     </div>
@@ -76,22 +76,22 @@
             <i class="bi bi-upload"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="downloadDocument().subscribe()"
-            [disabled]="!canDownloadDocument">
+            [disabled]="!canDownloadDocument()">
             <i class="bi bi-download"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="deleteDocument().subscribe()"
-            [disabled]="!canDeleteDocument">
+            [disabled]="!canDeleteDocument()">
             <i class="bi bi-trash"></i>
         </button>
     </div>
     <div class="btn-group me-2" id="viewModeGroup">
         <input type="radio" [value]="'list'" class="btn-check" id="viewModeList" name="viewModeGroup" autocomplete="off"
-            (change)="setViewMode('list').subscribe()" [checked]="viewMode === 'list'">
+            (change)="setViewMode('list')" [checked]="viewMode() === 'list'">
         <label class="btn btn-primary" for="viewModeList">
             <i class="bi bi-list"></i>
         </label>
         <input type="radio" [value]="'tree'" class="btn-check" id="viewModeTree" name="viewModeGroup" autocomplete="off"
-            (change)="setViewMode('tree').subscribe()" [checked]="viewMode === 'tree'">
+            (change)="setViewMode('tree')" [checked]="viewMode() === 'tree'">
         <label class="btn btn-primary" for="viewModeTree">
             <i class="bi bi-diagram-3"></i>
         </label>
@@ -101,9 +101,9 @@
             <button type="button" class="btn btn-primary" ngbDropdownToggle id="selectEndpoints"
                 translate>LABEL_VIEWS</button>
             <div ngbDropdownMenu class="dropdown-menu" id="selectEndpoints">
-                <button ngbDropdownItem (click)="viewUserFeedback()" [disabled]="!canViewUserFeedback"
+                <button ngbDropdownItem (click)="viewUserFeedback()" [disabled]="!canViewUserFeedback()"
                     translate>CMD_VIEW_USER_FEEDBACK</button>
-                <button ngbDropdownItem (click)="viewNameplate()" [disabled]="!canViewNameplate"
+                <button ngbDropdownItem (click)="viewNameplate()" [disabled]="!canViewNameplate()"
                     translate>CMD_VIEW_NAMEPLATE</button>
             </div>
         </div>
@@ -112,7 +112,7 @@
         <div class="input-group-text">
             <i class="bi bi-filter"></i>
         </div>
-        <input #textInput type="text" class="form-control" [value]="filterText"
+        <input #textInput type="text" class="form-control" [value]="filterText()"
             [placeholder]="'PLACEHOLDER_FILTER' | translate" (change)="setFilter(textInput.value)"
             (keydown.enter)="textInput.blur()">
     </div>
