--- a/projects/aas-portal/src/app/aas/aas.component.html
+++ b/projects/aas-portal/src/app/aas/aas.component.html
@@ -33,8 +33,8 @@
     </div>
     }
     <div class="row">
-        <fhg-aas-tree #aasTree [state]="state()" [search]="search()" [document]="document()"
-            [(selected)]="selectedElements">
+        <fhg-aas-tree #aasTree [state]="state()" [searchExpression]="searchExpression()" [document]="document()"
+            (selected)="selectedElements.set($event)">
         </fhg-aas-tree>
     </div>
 </div>
@@ -55,11 +55,11 @@
             <option [ngValue]="page">{{page.name}}</option>
             }
         </select>
-        <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')" [disabled]="!canAddToDashboard">
+        <button type="button" class="btn btn-primary" (click)="addToDashboard('Line')" [disabled]="!canAddToDashboard()">
             <i class="bi bi-graph-up"></i>
         </button>
         <button type="button" class="btn btn-primary" (click)="addToDashboard('BarVertical')"
-            [disabled]="!canAddToDashboard">
+            [disabled]="!canAddToDashboard()">
             <i class="bi bi-bar-chart-line-fill"></i>
         </button>
     </div>
@@ -96,8 +96,8 @@
     </div>
     <div class="input-group flex-grow-1 me-2">
         <div class="input-group-text"><i class="bi bi-search"></i></div>
-        <input #textInput type="text" class="form-control" [value]="search()"
-            [placeholder]="'PLACEHOLDER_FILTER' | translate" (input)="applySearch(textInput.value)">
+        <input #textInput type="text" class="form-control" [value]="searchExpression()"
+            [placeholder]="'PLACEHOLDER_FILTER' | translate" (input)="searchExpressionChange(textInput.value)">
         <button type="button" class="btn btn-primary" (click)="aasTree.findNext()">
             <i class="bi bi-chevron-down"></i>
         </button>
