--- a/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
+++ b/projects/aas-lib/src/lib/aas-tree/aas-tree.component.html
@@ -127,5 +127,5 @@
     </tbody>
 </table>
 } @else {
-<div class="alert alert-info text-center mt-2" role="alert">{{message}}</div>
+<div class="alert alert-info text-center mt-2" role="alert">{{message()}}</div>
 }
